tests/baselines/reference/restParametersWithArrayTypeAnnotations(strict=true).errors.txt
restParametersWithArrayTypeAnnotations.ts(5,11): error TS1014: A rest parameter must be last in a parameter list.
restParametersWithArrayTypeAnnotations.ts(12,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(13,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(13,9): error TS1014: A rest parameter must be last in a parameter list.
restParametersWithArrayTypeAnnotations.ts(17,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(18,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(23,21): error TS1014: A rest parameter must be last in a parameter list.
restParametersWithArrayTypeAnnotations.ts(32,11): error TS1014: A rest parameter must be last in a parameter list.
restParametersWithArrayTypeAnnotations.ts(39,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(40,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(40,9): error TS1014: A rest parameter must be last in a parameter list.
restParametersWithArrayTypeAnnotations.ts(44,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(45,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
restParametersWithArrayTypeAnnotations.ts(50,21): error TS1014: A rest parameter must be last in a parameter list.


==== restParametersWithArrayTypeAnnotations.ts (14 errors) ====
    // Rest parameters must be an array type if they have a type annotation, errors only for the functions with 2 rest params
    
    function foo(...x: number[]) { }
    var f = function foo(...x: number[]) { }
    var f2 = (...x: number[], ...y: number[]) => { }
              ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.
    
    class C {
        foo(...x: number[]) { }
    }
    
    interface I {
        (...x: number[]);
        ~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
        foo(...x: number[], ...y: number[]);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.
    }
    
    var a: {
        (...x: number[]);
        ~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
        foo(...x: number[]);
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    var b = {
        foo(...x: number[]) { },
        a: function foo(...x: number[], ...y: number[]) { },
                        ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.
        b: (...x: number[]) => { }
    }
    
    
    
    
    function foo2(...x: Array<string>) { }
    var f3 = function foo(...x: Array<string>) { }
    var f4 = (...x: Array<string>, ...y: Array<string>) => { }
              ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.
    
    class C2 {
        foo(...x: Array<string>) { }
    }
    
    interface I2 {
        (...x: Array<string>);
        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
        foo(...x: Array<string>, ...y: Array<string>);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
            ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.
    }
    
    var a2: {
        (...x: Array<string>);
        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
        foo(...x: Array<string>);
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    var b2 = {
        foo(...x: Array<string>) { },
        a: function foo(...x: Array<string>, ...y: Array<string>) { },
                        ~~~
!!! error TS1014: A rest parameter must be last in a parameter list.
        b: (...x: Array<string>) => { }
    }